# new_hipo

./: .pre-commit-config.yaml  CI_CD_FIXES_SUMMARY.md  Dockerfile  LICENSE  MANIFEST.in  README-MULTICLOUD-K8S.md  README.md  coverage.xml  docker-entrypoint.sh  hipo_ui_description.md  hipo_ui_mockup.md  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  streamlit_demo.py  streamlit_standalone.py  test_package.py
.aws/: task-definition.json
.github/workflows/: aws.yml  ci.yml  nightly-tests.yml  release.yml  security.yml  workflow-sync.yml
config/models/: llama2-7b.yaml
docs/: README.md  aws-deployment.md  ci-cd-guide.md  ci-cd-updates.md  github-secrets-setup.md  index.md  security-guide.md
docs/api/: cloud.md  kubernetes.md  models.md  secrets.md
docs/architecture/: overview.md
docs/tutorials/: getting-started.md  model-weights-management.md  secure-model-deployment.md
examples/: manage_model_weights_example.py  serve_model_example.py  train_model_example.py
github/workflows/: docs.yml  nightly-tests.yml  publish.yml  release.yml
k8s/dev/: deployment.yaml
k8s/prod/: deployment.yaml
scripts/: cleanup_test_resources.py  validate_ci.sh
site/: 404.html  index.html  objects.inv
site/search/: search_index.json
site/security-guide/: index.html
src/: __init__.py  main.py
src/api/: app.py  middleware.py
src/autoscaling/: __init__.py  gpu_autoscaler.py
src/cloud/: __init__.py  aws_provider.py  factory.py  gcp_provider.py  provider.py
src/config/: config.py  default_config.yaml  kubernetes_config.yaml
src/data/: data_loader.py
src/gateway/: __init__.py  api_gateway.py
src/kubernetes/: __init__.py  cluster_api_manager.py  main.py  orchestrator.py
src/models/: model_base.py  neural_network.py  secure_weights.py  sklearn_model.py
src/observability/: metrics_collector.py  tracing.py
src/pipelines/: pipeline.py
src/secrets/: __init__.py  secret_manager.py
src/security/: encryption.py
src/ui/: __init__.py  app.py  run_ui.py  secure_weights.py
src/utils/: circuit_breaker.py  fault_tolerance.py  logging_utils.py  preprocessing.py
tests/: conftest.py  test_config.py  test_orchestrator.py
tests/integration/: test_cloud_storage.py  test_model_weights.py
(+13 files in other folders)
