[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hipo"
version = "0.1.0"
description = "A modular and scalable infrastructure for machine learning projects"
readme = "README.md"
authors = [
    {name = "Akram Sheriff", email = "sheriff.akram.usa@gmail.com"}
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.2.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "pyyaml>=6.0",
    "flask>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]
ml = [
    "tensorflow>=2.12.0",
    "torch>=2.0.0",
    "xgboost>=1.7.0",
    "lightgbm>=3.3.0",
]
deploy = [
    "gunicorn>=20.1.0",
    "docker>=6.0.0",
    "mlflow>=2.2.0",
]

[project.urls]
"Homepage" = "https://github.com/akramsheriff5/hipo"
"Bug Tracker" = "https://github.com/akramsheriff5/hipo/issues"
"Contact" = "mailto:sheriff.akram.usa@gmail.com"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.black]
line-length = 127
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 127
skip = [".git", "__pycache__", "build", "dist", "venv", ".pytest_cache", "*.egg-info", "site"]
known_first_party = ["src"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "build", "dist", "site"]
skips = ["B101", "B311"]
targets = ["src"]
